# solvency

./: Cargo.toml  README.md
gadgets/: Cargo.toml
gadgets/src/poseidon/: pow5.rs  primitives.rs
gadgets/src/poseidon/primitives/: p128pow5t3.rs
proof/: Cargo.toml  README.md
proof/src/: _merkle_tree.rs  account.rs  field.rs  fr.rs  lib.rs  main.rs  merkle_sum_tree.rs  merkle_tree.rs  poseidon.rs  types.rs
proof/src/circuits/: hash.rs  merkle_tree.rs  merkle_tree_bk.rs  mod.rs
proof/src/circuits/merkle_tree/: chip.rs  instruction.rs
proof/src/crypto/: primitives.rs
proof/src/merkle_sum_tree/: error.rs  hasher.rs  merkle_proof.rs  partial_tree.rs  prelude.rs  tree_item.rs
proof/src/merkle_sum_tree/algorithms/: mod.rs  p128pow5t3.rs  poseidon.rs
proof/src/merkle_sum_tree/proof_serializers/: direct_hashes_order.rs  merkle_proof_serializer.rs  mod.rs  reverse_hashes_order.rs
proof/src/merkle_sum_tree/utils/: indices.rs
proof/src/merkle_tree/: _mod.rs  parallel_smt.rs
