[package]
name = "halo2_gadgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
rand = "0.8"
group = "0.12"
ff = "0.12"
ff_ce = "0.14"
proptest = { version = "1.0.0", optional = true }
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1